# clutter-gtkmm

./: .gitignore  ChangeLog  Makefile.am  NEWS  autogen.sh  clutter-gtkmm.doap  configure.ac  configure.in
clutter-gtk/: Makefile.am  clutter-gtkmm-config.h.in  clutter-gtkmm-uninstalled.pc.in  clutter-gtkmm.h  clutter-gtkmm.pc.in  clutter-gtkmmconfig.h.in
clutter-gtk/clutter-gtkmm/: .gitignore  Makefile.am  filelist.am  init.cc  init.h  utility.cc  utility.h  wrap_init.h
clutter-gtk/clutter-gtkmm/private/: Makefile.am
clutter-gtk/src/: Makefile.am  Makefile_list_of_hg.am_fragment  clutter-gtk_docs.xml  clutter-gtk_enums.defs  clutter-gtk_methods.defs  clutter-gtk_signals.defs  embed.ccg  embed.hg  filelist.am  viewport.ccg  viewport.hg
clutter/cluttermm/: init.cc  utility.h
clutter/src/: behaviour-ellipse.ccg  types.hg
codegen/: Makefile.am
codegen/extradefs/: generate_extra_defs_clutter_gtk.cc
codegen/m4/: convert.m4  filelist.am
doc/: Makefile.am
doc/reference/: Doxyfile.in
docs/: Makefile.am  Makefile_web.am_fragment
docs/reference/: Doxyfile.in  Makefile.am
examples/: Makefile.am  Makefile.am_fragment  embed-gtk.cc
examples/events/: Makefile.am  event.cc  event.h  main.cc
tests/: test-alpha-creation.cc
tools/extra_defs_gen/: Makefile.am  generate_defs_clutter_gtk.cc
tools/m4/: Makefile.am  Makefile_list_of_sources.am_fragment  convert.m4
