AC_INIT(clutter-gtk/clutter-gtkmm-config.h.in)

#########################################################################
#  Version and initialization
#########################################################################
CLUTTER_GTKMM_MAJOR_VERSION=0
CLUTTER_GTKMM_MINOR_VERSION=9
CLUTTER_GTKMM_MICRO_VERSION=3

#
# +1 : ? : +1  == new interface that does not break old one
# +1 : ? : 0   == new interface that breaks old one
#  ? : ? : 0   == no new interfaces, but breaks apps
#  ? :+1 : ?   == just some internal changes, nothing breaks but might work
#                 better
# CURRENT : REVISION : AGE
CLUTTER_GTKMM_SO_VERSION=2:0:0

CLUTTER_GTKMM_VERSION=$CLUTTER_GTKMM_MAJOR_VERSION.$CLUTTER_GTKMM_MINOR_VERSION.$CLUTTER_GTKMM_MICRO_VERSION
CLUTTER_GTKMM_RELEASE=$CLUTTER_GTKMM_MAJOR_VERSION.$CLUTTER_GTKMM_MINOR_VERSION
AC_DEFINE_UNQUOTED([CLUTTER_GTKMM_MAJOR_VERSION], $CLUTTER_GTKMM_MAJOR_VERSION, major version)
AC_DEFINE_UNQUOTED([CLUTTER_GTKMM_MINOR_VERSION], $CLUTTER_GTKMM_MINOR_VERSION, minor version)
AC_DEFINE_UNQUOTED([CLUTTER_GTKMM_MICRO_VERSION], $CLUTTER_GTKMM_MICRO_VERSION, micro version)
AC_DEFINE_UNQUOTED([CLUTTER_GTKMM_VERSION], "$CLUTTER_GTKMM_VERSION", clutter-gtkmm version string)
AC_SUBST(CLUTTER_GTKMM_VERSION)
AC_SUBST(CLUTTER_GTKMM_RELEASE)
AC_SUBST(CLUTTER_GTKMM_SO_VERSION)

AC_CONFIG_AUX_DIR(scripts)

dnl For automake.
VERSION=$CLUTTER_GTKMM_VERSION
PACKAGE=clutter-gtkmm

dnl Initialize automake stuff
AM_INIT_AUTOMAKE($PACKAGE, $VERSION)

dnl Specify a configuration file (no autoheader)
AM_CONFIG_HEADER(clutter-gtk/clutter-gtkmm-config.h)
AM_MAINTAINER_MODE
AL_ACLOCAL_INCLUDE(scripts)


#########################################################################
#  Configure arguments
#########################################################################

#########################################################################
#  Environment Checks
#########################################################################
AC_PROG_CC
AC_PROG_CPP
AC_PROG_MAKE_SET
AC_CANONICAL_HOST
AM_DISABLE_STATIC
AM_PROG_LIBTOOL

AL_PROG_GNU_M4(AC_MSG_ERROR([dnl
SUN m4 does not work for building clutter-gtkmm.
Please install GNU m4.]))

AL_PROG_GNU_MAKE(AC_MSG_ERROR([dnl
SUN make does not work for building clutter-gtkmm.
Please install GNU make.]))

AL_PROG_PERL(AC_MSG_ERROR([Perl is required to build clutter-gtkmm.]))

AC_CHECK_PROGS(PERL, perl5 perl)

#########################################################################
#  Dependancy checks
#########################################################################

PKG_CHECK_MODULES(CLUTTER_GTKMM,
                  [gtkmm-2.4
                   cluttermm-0.9
                   clutter-gtk-0.9 >= 0.9.1])
AC_SUBST(CLUTTER_GTKMM_CFLAGS)
AC_SUBST(CLUTTER_GTKMM_LIBS)

# the API version of the library.  Libraries and pkg-config files will have this
# value appended to them, e.g. libclutter-0.6.so
API_VER=0.9
AC_SUBST([API_VER])

GMM_PROCDIR=`pkg-config --variable=gmmprocdir glibmm-2.4`
AC_SUBST(GMM_PROCDIR)
GMM_PROC=$GMM_PROCDIR/gmmproc
AC_SUBST(GMM_PROC)

#########################################################################
#  C++ checks
#########################################################################
AC_PROG_CXX
AC_LANG_CPLUSPLUS


# HACK:  Assign a dummy in order to prevent execution of autoheader by the
# maintainer-mode rules.  That would fail since we aren't using autoheader.
AUTOHEADER=':'


AC_OUTPUT([
  Makefile

  clutter-gtk/Makefile
  clutter-gtk/clutter-gtkmm-$API_VER.pc:clutter-gtk/clutter-gtkmm.pc.in
  clutter-gtk/src/Makefile
  clutter-gtk/clutter-gtkmm/Makefile
  clutter-gtk/clutter-gtkmm/private/Makefile

  tools/Makefile
    tools/extra_defs_gen/Makefile
    tools/m4/Makefile

  scripts/Makefile

  docs/Makefile
  docs/reference/Makefile
    docs/reference/Doxyfile

  examples/Makefile
    examples/events/Makefile
])
:
